Crash selecting vertex after hiding portion of mesh #60578

Closed
opened 2019-01-16 21:44:06 +01:00 by Casey Frost · 3 comments

System Information
Operating system: Windows 10 Pro
Graphics card: GTX 1070

Blender Version
Broken: 2.80 Beta 2019-01-16 19:04
Hash: 8ba86020cc

Short description of error

Blender crashes after selecting a portion of the mesh after an invert then hide operation.

willys.zip

Exact steps for others to reproduce the error

Open .blend file provided, you should see a jeep in vertex weight view.

Enter edit mode if not already there and ensure everything is deselected.

Go to the vertex groups, and find the group named "Roof_Morph"

select by vertex group, and the roof should be highlighted.

Invert with Ctrl-I shortcut

Hide with H shortcut

At this point, attempting to select a vertex causes blender to crash on my end.

**System Information** Operating system: Windows 10 Pro Graphics card: GTX 1070 **Blender Version** Broken: 2.80 Beta 2019-01-16 19:04 Hash: 8ba86020cc50 **Short description of error** Blender crashes after selecting a portion of the mesh after an invert then hide operation. [willys.zip](https://archive.blender.org/developer/F6309346/willys.zip) **Exact steps for others to reproduce the error** Open .blend file provided, you should see a jeep in vertex weight view. Enter edit mode if not already there and ensure everything is deselected. Go to the vertex groups, and find the group named "Roof_Morph" select by vertex group, and the roof should be highlighted. Invert with Ctrl-I shortcut Hide with H shortcut At this point, attempting to select a vertex causes blender to crash on my end.
Author

Added subscriber: @HardRooster

Added subscriber: @HardRooster
Campbell Barton self-assigned this 2019-01-17 02:40:46 +01:00

This issue was referenced by 76fdd33df2

This issue was referenced by 76fdd33df212cc609d3c4d8f01333be2928bdc70

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60578
No description provided.