Fix T60578: Crash selecting after hiding vertices